packages/module/src/SourcesCard/SourcesCard.scss
.pf-chatbot__source,
.pf-chatbot__sources-card-base {
  display: flex;
  flex-direction: column;
  gap: var(--pf-t--global--spacer--sm);
  padding-block-start: var(--pf-t--global--spacer--sm);

  &:not(.pf-m-wrap) {
    max-width: 22.5rem;
  }
}

.pf-chatbot__sources-card-base {
  a {
    color: var(--pf-t--global--text--color--link--default) !important;
    -webkit-text-decoration: var(--pf-t--global--text-decoration--link--line--default) !important;
    text-decoration: var(--pf-t--global--text-decoration--link--line--default) !important;
  }
}

.pf-chatbot__sources-card-base.pf-m-wrap {
  .pf-chatbot__sources-list {
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    gap: var(--pf-t--global--spacer--xs);
  }
}

.pf-chatbot__sources-card {
  box-shadow: var(--pf-t--global--box-shadow--sm);
}

.pf-chatbot__compact-sources-card-body {
  --pf-v6-c-card--child--PaddingBlockEnd: var(--pf-t--global--spacer--xs);
}

.pf-chatbot__sources-card-subtitle,
.pf-chatbot__sources-card-subtle {
  color: var(--pf-t--global--text--color--subtle);
  font-size: var(--pf-t--global--font--size--body--sm);
  font-weight: var(--pf-t--global--font--weight--body--default);
}

.pf-chatbot__sources-card-body-text {
  display: block;
  display: -webkit-box;
  height: 2.8125rem;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.pf-chatbot__sources-card-title-container {
  display: flex;
  flex-direction: column;
  gap: var(--pf-t--global--spacer--xs);
}

.pf-chatbot__sources-card-footer-container {
  border-top: var(--pf-t--global--border--width--regular) solid var(--pf-t--global--border--color--default);
  padding: var(--pf-t--global--spacer--sm) var(--pf-t--global--spacer--md) var(--pf-t--global--spacer--sm)
    var(--pf-t--global--spacer--sm) !important;
  .pf-chatbot__sources-card-footer {
    display: flex;
    align-items: center;

    &-buttons {
      display: flex;
      gap: var(--pf-t--global--spacer--xs);
      align-items: center;
      justify-content: space-between;
      flex: 1;

      .pf-v6-c-button {
        border-radius: var(--pf-t--global--border--radius--pill);
        padding: var(--pf-t--global--spacer--sm);
        width: 2.31rem;
        height: 2.31rem;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      button:disabled,
      button[disabled] {
        .pf-v6-c-icon__content {
          color: var(--pf-t--global--icon--color--disabled);
        }
      }
      .pf-v6-c-button__text {
        display: flex;
        align-items: center;
      }
      // Interactive states
      .pf-v6-c-button:hover,
      .pf-v6-c-button:focus {
        .pf-v6-c-button__icon {
          color: var(--pf-t--global--icon--color--regular);
        }
      }
      .pf-v6-c-button__icon {
        color: var(--pf-t--global--icon--color--subtle);
      }
    }
  }
}

.pf-v6-c-card.pf-m-compact.pf-chatbot__sources-card {
  .pf-v6-c-card__footer.pf-chatbot__sources-card-footer-container {
    border-top: var(--pf-t--global--border--width--regular) solid var(--pf-t--global--border--color--default);
    padding: var(--pf-t--global--spacer--xs) var(--pf-t--global--spacer--sm) var(--pf-t--global--spacer--xs)
      var(--pf-t--global--spacer--xs) !important;
  }
}

